--- a/en/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
+++ b/en/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
@@ -1949,7 +1949,7 @@
 <li><a href="#_transfer_proxy_configuration_to_new_host">1.2. Transfer Proxy Configuration to New Host</a></li>
 </ul>
 </li>
-<li><a href="#_migrate_uyuni_2024_04_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni 2024.04 Proxy to Uyuni 2024.10 Containerized Proxy</a></li>
+<li><a href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></li>
 <li><a href="#_installing_packages_using_the_webui">3. Installing packages using the Web UI</a></li>
 <li><a href="#_generate_proxy_config_with_spacecmd_and_self_signed_certificate">4. Generate Proxy Config with spacecmd and Self-Signed Certificate</a></li>
 <li><a href="#_generate_proxy_config_with_spacecmd_and_custom_certificate">5. Generate Proxy Config with spacecmd and Custom Certificate</a></li>
@@ -2102,10 +2102,10 @@ proxy-ssh</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_migrate_uyuni_2024_04_proxy_to_uyuni_2024_10_containerized_proxy"><a class="anchor" href="#_migrate_uyuni_2024_04_proxy_to_uyuni_2024_10_containerized_proxy"></a><a class="link" href="#_migrate_uyuni_2024_04_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni 2024.04 Proxy to Uyuni 2024.10 Containerized Proxy</a></h2>
+<h2 id="_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"><a class="anchor" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"></a><a class="link" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></h2>
 <div class="sectionbody">
 <div class="olist arabic">
-<div class="title">Task: Migrate Uyuni 2024.04 Containerized Proxy to Uyuni 2024.10 New Containerized Proxy</div>
+<div class="title">Task: Migrate Uyuni Containerized Proxy to Uyuni 2024.10 New Containerized Proxy</div>
 <ol class="arabic">
 <li>
 <p>Boot your new machine and begin installation of openSUSE Leap Micro 5.5.</p>
