--- a/ja/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
+++ b/ja/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
@@ -1949,7 +1949,7 @@
 <li><a href="#_新しいホストへのプロキシ設定の転送">1.2. 新しいホストへのプロキシ設定の転送</a></li>
 </ul>
 </li>
-<li><a href="#_uyuni_2024_10のコンテナ化されたプロキシへのuyuni_2024_04プロキシの移行">2. Uyuni 2024.10のコンテナ化されたプロキシへのUyuni 2024.04プロキシの移行</a></li>
+<li><a href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></li>
 <li><a href="#_webuiを使用したパッケージのインストール">3. Web UIを使用したパッケージのインストール</a></li>
 <li><a href="#_spacecmdと自己署名証明書を使用したプロキシ設定の生成">4. spacecmdと自己署名証明書を使用したプロキシ設定の生成</a></li>
 <li><a href="#_spacecmdとカスタム証明書を使用したプロキシ設定の生成">5. spacecmdとカスタム証明書を使用したプロキシ設定の生成</a></li>
@@ -2101,10 +2101,10 @@ proxy-ssh</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_uyuni_2024_10のコンテナ化されたプロキシへのuyuni_2024_04プロキシの移行"><a class="anchor" href="#_uyuni_2024_10のコンテナ化されたプロキシへのuyuni_2024_04プロキシの移行"></a><a class="link" href="#_uyuni_2024_10のコンテナ化されたプロキシへのuyuni_2024_04プロキシの移行">2. Uyuni 2024.10のコンテナ化されたプロキシへのUyuni 2024.04プロキシの移行</a></h2>
+<h2 id="_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"><a class="anchor" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"></a><a class="link" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></h2>
 <div class="sectionbody">
 <div class="olist arabic">
-<div class="title">タスク: Uyuni 2024.04のコンテナ化されたプロキシからUyuni 2024.10の新しいコンテナ化されたプロキシへの移行</div>
+<div class="title">Task: Migrate Uyuni Containerized Proxy to Uyuni 2024.10 New Containerized Proxy</div>
 <ol class="arabic">
 <li>
 <p>新しいマシンをブートし、openSUSE Leap Micro 5.5のインストールを開始します。</p>
