--- a/ko/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
+++ b/ko/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
@@ -1949,7 +1949,7 @@
 <li><a href="#_프록시_구성을_새_호스트로_전송">1.2. 프록시 구성을 새 호스트로 전송</a></li>
 </ul>
 </li>
-<li><a href="#_uyuni_2024_04_프록시를_uyuni_2024_10_컨테이너화된_프록시로_마이그레이션">2. Uyuni 2024.04 프록시를 Uyuni 2024.10 컨테이너화된 프록시로 마이그레이션</a></li>
+<li><a href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></li>
 <li><a href="#_webui을를_사용하여_패키지_설치">3. Web UI을(를) 사용하여 패키지 설치</a></li>
 <li><a href="#_spacecmd_및_자체_서명_인증서를_사용하여_프록시_구성_생성">4. spacecmd 및 자체 서명 인증서를 사용하여 프록시 구성 생성</a></li>
 <li><a href="#_spacecmd_및_사용자_지정_인증서를_사용하여_프록시_구성_생성">5. spacecmd 및 사용자 지정 인증서를 사용하여 프록시 구성 생성</a></li>
@@ -2101,10 +2101,10 @@ proxy-ssh</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_uyuni_2024_04_프록시를_uyuni_2024_10_컨테이너화된_프록시로_마이그레이션"><a class="anchor" href="#_uyuni_2024_04_프록시를_uyuni_2024_10_컨테이너화된_프록시로_마이그레이션"></a><a class="link" href="#_uyuni_2024_04_프록시를_uyuni_2024_10_컨테이너화된_프록시로_마이그레이션">2. Uyuni 2024.04 프록시를 Uyuni 2024.10 컨테이너화된 프록시로 마이그레이션</a></h2>
+<h2 id="_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"><a class="anchor" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"></a><a class="link" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></h2>
 <div class="sectionbody">
 <div class="olist arabic">
-<div class="title">작업: Uyuni 2024.04 컨테이너화된 프록시를 Uyuni 2024.10 새 컨테이너화된 프록시로 마이그레이션</div>
+<div class="title">Task: Migrate Uyuni Containerized Proxy to Uyuni 2024.10 New Containerized Proxy</div>
 <ol class="arabic">
 <li>
 <p>새 시스템을 부팅하고 openSUSE Leap Micro 5.5 설치를 시작합니다.</p>
