--- a/zh_CN/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
+++ b/zh_CN/uyuni/installation-and-upgrade/container-deployment/uyuni/proxy-migration-uyuni.html
@@ -1949,7 +1949,7 @@
 <li><a href="#_将代理配置传输到新主机">1.2. 将代理配置传输到新主机</a></li>
 </ul>
 </li>
-<li><a href="#_将_uyuni_2024_04_代理迁移到_uyuni_2024_10_容器化代理">2. 将 Uyuni 2024.04 代理迁移到 Uyuni 2024.10 容器化代理</a></li>
+<li><a href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></li>
 <li><a href="#_使用_webui_安装软件包">3. 使用 Web UI 安装软件包</a></li>
 <li><a href="#_使用_spacecmd_和自我签名证书生成代理配置">4. 使用 spacecmd 和自我签名证书生成代理配置</a></li>
 <li><a href="#_使用_spacecmd_和自定义证书生成代理配置">5. 使用 spacecmd 和自定义证书生成代理配置</a></li>
@@ -2101,10 +2101,10 @@ proxy-ssh</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_将_uyuni_2024_04_代理迁移到_uyuni_2024_10_容器化代理"><a class="anchor" href="#_将_uyuni_2024_04_代理迁移到_uyuni_2024_10_容器化代理"></a><a class="link" href="#_将_uyuni_2024_04_代理迁移到_uyuni_2024_10_容器化代理">2. 将 Uyuni 2024.04 代理迁移到 Uyuni 2024.10 容器化代理</a></h2>
+<h2 id="_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"><a class="anchor" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy"></a><a class="link" href="#_migrate_uyuni_proxy_to_uyuni_2024_10_containerized_proxy">2. Migrate Uyuni Proxy to Uyuni 2024.10 Containerized Proxy</a></h2>
 <div class="sectionbody">
 <div class="olist arabic">
-<div class="title">任务：将 Uyuni 2024.04 容器化代理迁移到 Uyuni 2024.10 新容器化代理</div>
+<div class="title">Task: Migrate Uyuni Containerized Proxy to Uyuni 2024.10 New Containerized Proxy</div>
 <ol class="arabic">
 <li>
 <p>引导新计算机，然后开始安装 openSUSE Leap Micro 5.5。</p>
